--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <h1>Incremental Body Strengthening Game</h1>
     <p>Welcome to the Incremental Body Strengthening game! Unfortunately, this game can't run directly in the browser.</p>
-    <p>Download the game code from the <a href="https://goonsfuneral.github.io/incremental-game-lol/">GitHub repository</a> to play locally.</p>
+    <p>Download the game code from the <a href="https://github.com/GoonsFuneral/incremental-game-lol">GitHub repository</a> to play locally.</p>
     <p>Instructions:</p>
     <ul>
         <li>Clone or download the repository from GitHub.</li>
